[package]
name = "cortexast"
version = "2.0.4"
edition = "2021"
description = "The AI-Native Code Intelligence Backend for LLM agents. Pure Rust MCP server with semantic code navigation and AST time machine."
authors = ["Thanon Aphithanawat <thanon@aphithanawat.me>"]
repository = "https://github.com/DevsHero/CortexAST"
keywords = ["llm", "mcp", "context", "optimization", "rust", "vector-search"]
categories = ["command-line-utilities", "development-tools"]
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ignore = "0.4"
glob = "0.3"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
quick-xml = "0.31"
toml = "0.8"
regex = "1.10"
rayon = "1.10"
indicatif = "0.17"

# Hybrid search (local embeddings + flat-file vector index with brute-force cosine)
# model2vec-rs: static embeddings via HuggingFace Hub; no ONNX runtime required.
# Vector index: serde_json flat-file index with O(n*d) cosine search (n<=400 files, d=256 dims).
model2vec-rs = "0.1.4"

# Deterministic content hashing for cache invalidation (replaces mtime).
# xxh3 is a non-cryptographic but collision-resistant hash; ~10 GB/s on M4.
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Phase 3: resolve ~/.cortexast/global_memory.jsonl default path.
dirs = "6.0.0"

# Rules engine: parse YAML rule files for cortex_get_rules deep-merge.
serde_yaml = "0.9"

# Blocking HTTP client for cortex_remember → CortexSync POST.
# ureq is 100% synchronous — safe to call from run_stdio_server's blocking loop.
ureq = { version = "2.12", features = ["json"] }

# Deep-dive inspection (symbol extraction)
tree-sitter = "0.26.5"
tree-sitter-rust = "0.21.0"
tree-sitter-typescript = "0.21.0"
tree-sitter-python = "0.21.0"
tree-sitter-go = { version = "0.21.0", optional = true }
tree-sitter-dart = { version = "0.0.4", optional = true }
tree-sitter-java = { version = "0.21.0", optional = true }
tree-sitter-c-sharp = { version = "0.21.0", optional = true }
tree-sitter-php = { version = "0.23.0", optional = true }
tree-sitter-proto = { version = "0.4.0", package = "tree-sitter-proto", optional = true }

[dev-dependencies]
tempfile = "3.15.0"

[features]
# Enable all tree-sitter language grammars by default for full multi-language support.
# These are compiled from C source and add a few seconds to fresh builds, but subsequent
# incremental builds are nearly instant.
default = ["lang-go", "lang-dart", "lang-java", "lang-csharp", "lang-php", "lang-proto"]

lang-go = ["dep:tree-sitter-go"]
lang-dart = ["dep:tree-sitter-dart"]
lang-java = ["dep:tree-sitter-java"]
lang-csharp = ["dep:tree-sitter-c-sharp"]
lang-php = ["dep:tree-sitter-php"]
lang-proto = ["dep:tree-sitter-proto"]

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3
